Added images to JMB Project

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 					</div>
 					<div class="project-content">
 						<div class="project-title">
-							<h3>Founded and designed social network for creatives</h3><!--<a href="artconnect.html"></a>-->
+							<h3>Social network for creatives</h3><!--<a href="artconnect.html"></a>-->
 							<p>Artconnect is the biggest social network for creatives in Germany, global since 2015.</p>
 						</div>
 						<div class="project-label">
