--- a/jmb.html
+++ b/jmb.html
@@ -138,6 +138,12 @@
             </div><!--End of Right Column-->
         </section>
 
+         <div class="st-hero">
+        <picture><!--Open Hero Image-->
+            <source srcset="img/jmb/jmb_hero.png" media="(max-width:767px)"><img src="img/jmb/jmb_hero.png" alt="Setting Design by Júlia Marí Bernaus">
+        </picture>
+        </div><!--End Hero Image-->
+
         <section id="related-projects"><!-- Open Related Projects-->
             <div>
                 <h3>Check out more Projects</h3>
@@ -241,14 +247,13 @@
                     </div>
                     <div class="related-project-content">
                         <div class="related-project-title">
-                            <h4>Founded and designed social network for creatives</h4>
+                            <h4>Social network for creatives</h4>
                             <!--<a href="artconnect.html"></a>-->
                         </div>
                     </div>
                     <!--end Project Content 4-->
                 </div>
                 <!--end Project 4-->
-           
             </div>
         </section><!-- End Related Projects-->
 
