--- a/linsenpate.html
+++ b/linsenpate.html
@@ -576,7 +576,7 @@
                     </div>
                     <div class="related-project-content">
                         <div class="related-project-title">
-                            <h4>Founded and designed social network for creatives</h4>
+                            <h4>Social network for creatives</h4>
                             <!--<a href="artconnect.html"></a>-->
                         </div>
                     </div>
