Added Subheader to projects

--- a/jmb.html
+++ b/jmb.html
@@ -53,7 +53,8 @@
     <main>
         <section id="jmb-intro" class="jmb-intro-flex-grid container"><!--Open Intro-->
             <div class="jmb-intro-left"><!--Open Right Column-->
-                <h2>Responsive portfolio with CSS, HTML & Javascript</h2><!--Open Text on Right Column-->
+                <h2>My Portfolio</h2><!--Open Text on Right Column-->
+                 <h3 class="subheader">Responsive portfolio with CSS, HTML & Javascript</h3>
                     <p>Working as a UX/UI Designer made me realize of the importance of understanding deeper front-end development. Although I had a basic knowledge of CSS and HTML, while working closely with developers I realized that I needed to undersand other concepts, such as bootstrap and javascript.</p>
                     <br>
                     <p>In Spring 2021 I decided to take the Front-End Development Specialization Course at CareerFoundry. Within one month I had I learned intensively CSS, HTML and the basics of Javascript and discovered my passion for front-end developement.</p>
