--- a/linsenpate.html
+++ b/linsenpate.html
@@ -52,6 +52,7 @@
         <section id="lp-intro" class="lp-intro-flex-grid container"><!--Open Intro--> 
             <div class="lp-intro-left"><!--Open Right Column-->
                 <h2>Der Linsenpate</h2><!--Open Text on Right Column-->
+                <h3 class="subheader">Contactlenses e-commerce shop responsive redesign</h3>
                 <p>
                 In January 2021, Mister Spex, one of the leading e-commerce eyewear platforms in Europe, contacted me to redesign
                 Linsenpate.de, one of their contact lenses e-commerce shop.</p>
