--- a/setting.html
+++ b/setting.html
@@ -54,6 +54,7 @@
         <section id="st-intro" class="st-intro-flex-grid container"><!--Open Intro-->
             <div class="st-intro-left"><!--Open Right Column-->
                 <h2>Setting</h2><!--Open Text on Right Column-->
+                <h3 class="subheader">Real-estate marketplace responsive redesign</h3>
                     <p>In Summer 2020, Setting, one of the leading office marketplace for startups, scaleups, and innovators in Berlin
                     contacted me to redesign their website.
                     <br>
