--- a/shore.html
+++ b/shore.html
@@ -58,6 +58,7 @@
                 <!--Open Right Column-->
                 <h2>Shore</h2>
                 <!--Open Text on Right Column-->
+                <h3 class="subheader">Android native app water sports case study</h3>
                 <p>In 2020, while studying UX Design at CareerFoundry, I chose to tackle this problem: to create an app with​
                 ​beautifully​​ displayed​ ​and​ ​easy​ ​to​ ​understand​ ​wind,​ ​wave​ ​and​ ​weather​ ​reports,​ ​forecasts, and​
                 ​statistics​​for​​ ​water​​sports​ ​practitioners.
