--- a/linsenpate.html
+++ b/linsenpate.html
@@ -29,7 +29,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Júlia Marí Bernaus">
     <link href="img/favicon.ico" rel="shortcut icon">
-    <title>Júlia Marí Bernaus | About</title>
+    <title>Júlia Marí Bernaus | Linsenpate</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
