Updated Related Projects with D+F new page

--- a/df.html
+++ b/df.html
@@ -75,23 +75,25 @@
     <main>
         <section id="jmb-intro" class="jmb-intro-flex-grid container"><!--Open Intro-->
             <div class="jmb-intro-left"><!--Open Right Column-->
-                <h2>My Portfolio</h2><!--Open Text on Right Column-->
-                 <h3 class="subheader">Responsive portfolio with CSS, HTML & Javascript</h3>
-                    <p>Working as a UX/UI Designer made me realize of the importance of understanding deeper front-end development. Although I had a basic knowledge of CSS and HTML, while working closely with developers I realized that I needed to undersand other concepts, such as bootstrap and javascript.</p>
+                <h2>Design+Friends</h2><!--Open Text on Right Column-->
+                 <h3 class="subheader">Designer community bootstrap responsive site</h3>
+                    <p>During the Corona Pandemic I realized that most of the Designer Meetups in Berlin were not active anymore. Bringing my event management and community building experience, I decided to start a Berliner Desiger community.</p>
                     <br>
-                    <p>In Spring 2021 I decided to take the Front-End Development Specialization Course at CareerFoundry. Within one month I had I learned intensively CSS, HTML and the basics of Javascript and discovered my passion for front-end developement.</p>
+                    <p>Since August 2020, I organize monthly meetups and talks for designers in Berlin. During the winter months, we meet on Zoom, and during the warm and safe months, we meet in-person. Our communication channels are Slack, a monthly Newsletter and our website. </p>
                     <br>
-                    <p>The result is this responsive portfolio working across all browsers. Read about the process here below and check my code on Github.</p>
+                    <p>We regularly run </p>
+                    <p>The result is a responsive portfolio built with bootstrap working across all browsers. Read about the process here below and check my code on Github.</p>
                 <!--End Text on Right Column-->
                 <div class="project-cta"><!--Open CTAs on Right Column-->
                     <a class="button button-primary project-cta" href="#challenge" role="button">Keep on reading</a>
-                    <a class="button button-secondary project-cta" href="https://github.com/jumaber/portfolio" target="_blank" role="button">Go to Github</a>
+                    <a class="button button-secondary project-cta" href="https://github.com/jumaber/designfriends" target="_blank" role="button">Go to Github</a>
                 </div><!--End CTAs on Right Column-->
             </div><!--Close right column-->
             <div class="jmb-intro-right" ><!--Open Left Column-->
                <picture>
-                    <source srcset="img/home/jmb_800x600.jpg" media="(max-width:767px)">
-                    <img src="img/home/jmb_800x600.jpg" alt="Júlia Marí Bernaus' Portfolio">
+                    <source srcset="img/home/designfriends_328x246.jpg" media="(max-width:767px)">
+                    <img src="img/home/designfriends_800x600.jpg" alt="Júlia Marí Bernaus' Portfolio">
+               </picture>
             </div>
         </section><!--Close Intro Section-->
 
@@ -101,15 +103,15 @@
                 <div class="table-flex-grid">
                     <ul class="table-item"><!--Open Challenge numbers-->
                         <li class="nr">01</li>
-                        <li><p>Showcase my work, communicate my personality and facilitate contact.</p></li>
+                        <li><p>How to communicate who we are, what we do, how to become part of the community and join the monthly events?</p></li>
                     </ul>
                     <ul class="table-item">
                         <li class="nr">02</li>
-                        <li><p>Create a responsive website for all viewposts and browsers with HTML and CSS.</p></li>
+                        <li><p>Identify the needs of our users, and adapt the meetups accordingly.</p></li>
                     </ul>
                     <ul class="table-item">
                         <li class="nr">03</li>
-                        <li><p>Learn enough Javascript to create simle animations and interactions.</p></li>
+                        <li><p>Create a responsive website for all viewposts and browsers with Bootstrap, HTML, CSS and Javascript.</p></li>
                     </ul>
                 </div><!--Close Challenge Numbers-->
                 </div><!--End Challenge Header-->
@@ -119,15 +121,15 @@
             <div class="prj-left-col"><!--Open Left Column-->
                 <div>
                     <h3>Solution</h3>
-                    <p>Through the building of my own portfolio, I would deeply learn CSS, HTML and set the grounds for Javascript and Bootstrap.
-                    <br>    
-                    The ultimate goal is to be able to build interactive prototypes and learn how to code with React, to work closer with developers.</p>
+                    <p>I took this oportunity to learn Bootstrap and improve the loading times and security by hosting the website on Netifly, pointing the DNS to that hosting and using their free SSL certificate service.</p>
                 </div>
                 <div class="prj-left-col-2">   
                     <div class="prj-left-col-2-left">
                             <h3>My Role</h3>
                             <p>UX/UI Designer<br>
-                            Front-End Developer</p>
+                            Front-End Developer
+                            Events Manager
+                            Communications Manager</p>
                     </div>
                     <div>
                         <h3>Tools</h3>
@@ -138,22 +140,25 @@
                         Netifly<br>
                         Hotjar<br>
                         Google Analytics<br>
-                        Inspector</p>
+                        Inspector
+                        Mailchimp
+                        Slack
+                        LinkedIn</p>
                     </div>
                 </div>
             </div><!--End Left Column-->
             <div class="prj-right-col"><!--Open Right Column-->
             <h3>The Process</h3>
+            <p>At Design+Friends we didn't know how we were going to be organizing events, but after 6 months we realized that it was a growing community and that we would be in for the long run. Despite having previously developed a UI and built a website with Wordpress, to keep the costs to zero we were using a very slow hosting service with no SSL certificate. After the Front-End Development course, I realized that by coding the website I could upload it on Netifly and have a quick and secure website hoste for free.</p>
             <ul>
-                <li><p>Analyzed the data on Google Analytics and the videos on Hotjar. I realized that most users tried to scroll down on the home page, unsuccessfully.</p></li>
-                <li><p>Taking into account the learnings from Google Analytics and Hotjar, I created wireframes for mobile and desktop, as well as a design system on Figma.</p></li>
-                <li><p>I exported all the images for mobile and desktop to the /img folder. </p></li>
-                <li><p>Created Github and Netifly account, and linked them together.</p></li>
-                <li><p>I added on Visual Studio Code linters and W3C Validator for HTML, CSS and Javascript.</p></li>
-                <li><p>With a mobile-first approach, I continued to write the HTML pages first and after that added the CSS.</p></li>
-                <li><p>Added some simple bootstrap code, to solve some layout issues quickly.</p></li>
-                <li><p>I wrote media queries for all viewport sizes.</p></li>
-                <li><p>Once the HTML and CSS was completed, I continued to add the Javascript code, which was a challenge.</p></li>
+                <li><p>In August 2020 I developed a branding concept, logo and UI in collaboration with Frank Eckenbrecht.</p></li>
+                <li><p>Used a free hosting service and pointed the DNS to it. Using the FTP access, I uploaded Wordpress and the plug in Divi, to build websites faster.</p></li>
+                <li><p>Created a website on Wordpress.</p></li>
+                <li><p>Set up the Slack channels and the newsletter on Mailchimp</p></li>
+                <li><p>Spread the word through Linkedin, and CareerFoundry's Berlin Slack Channel</p></li>
+                <li><p>In April 2021, I re-coded the website using HTML, CSS, Javascript and Bootstrap.</p></li>
+                <li><p>Hosted the website on Netifly, through Github.</p></li>
+                <li><p>Tested the website with fellow designers.</p></li>
                 <li><p>At this point, it was time to test. I organized 5 testers with similar characteristics to my users (potential employers, clients and designers).</p></li>
                 <li><p>I updated the portfolio with the feedback I got from the usability tests.</p></li>
                 <li><p>I tested the portfolio one last time across all viewports (mobile, tablet and desktop), as well as across all main browsers (Safari, Chrome, Firefox, Edge).</p></li>
@@ -161,11 +166,12 @@
             </div><!--End of Right Column-->
         </section>
 
-         <div class="st-hero">
-        <picture><!--Open Hero Image-->
-            <source srcset="img/jmb/jmb_hero.png" media="(max-width:767px)"><img src="img/jmb/jmb_hero.png" alt="Setting Design by Júlia Marí Bernaus">
-        </picture>
-        </div><!--End Hero Image-->
+        <div class="container">
+              <picture>
+                    <source srcset="img/df/df_mockup.png" media="(max-width:767px)">
+                    <img src="img/df/df_mockup.png" alt="Júlia Marí Bernaus' Portfolio">
+               </picture>
+        </div>
 
         <section id="related-projects"><!-- Open Related Projects-->
             <div>
@@ -233,23 +239,24 @@
                 <!--end Project 2-->
 
                 <div class="related-project">
-                    <!--Open Project 5-->
-                    <a href="df.html">
+                    <!--Open Project 6-->
+                    <a href="jmb.html">
                         <div class="image white-background">
                             <picture>
-                                <source srcset="img/home/designfriends_328x246.jpg" media="(max-width:767px)">
-                                <img src="img/home/designfriends_800x600.jpg" alt="Design+Friends" class="image__img round-borders">
+                                <source srcset="img/home/jmb_328x246.jpg" media="(max-width:767px)">
+                                <img src="img/home/jmb_800x600.jpg" alt="Júlia Marí Bernaus' Portfolio"
+                                    class="image__img round-borders">
                             </picture>
                         </div>
-                    </a>
+                    </a>    
                     <div class="related-project-content">
                         <div class="related-project-title">
-                            <h4><a href="df.html">Designer community bootstrap responsive site</h4></a>
-                            <!--<a href="df.html"></a>-->
+                            <h4><a href="jmb.html">Responsive portfolio with CSS, HTML & Javascript</a></h4>
                         </div>
                     </div>
-                    <!--end Project Content 5-->
-                </div> <!--End Project 5-->
+                    <!--end Project Content 6-->
+                </div>
+                <!--end Project 6-->
 
                 <div class="related-project">
                     <!--Open Project 4-->
