--- a/index.html
+++ b/index.html
@@ -182,20 +182,17 @@
 
 				</div><!--end Project 3-->
 				<div class="project"> <!--Open Project 5-->
-					<div class="image white-background">
-						<picture>
-							<source srcset="img/home/designfriends_328x246.jpg" media="(max-width:767px)">
-							<img src="img/home/designfriends_800x600.jpg" alt="Design+Friends" class="image__img round-borders">
-						</picture>
-						<div class="image__overlay image__overlay--blur">
-							<div class="image__title">
-								<h2>Coming Soon</h2>
-							</div>
-						</div>
+					<a href="df.html">
+						<div class="image white-background">
+							<picture>
+								<source srcset="img/home/designfriends_328x246.jpg" media="(max-width:767px)">
+								<img src="img/home/designfriends_800x600.jpg" alt="Design+Friends" class="image__img round-borders">
+							</picture>
+					</a>
 					</div>
 					<div class="project-content">
 						<div class="project-title">
-							<h3>Designer community bootstrap responsive site</h3>
+							<h3><a href="df.html">Designer community bootstrap responsive site</a></h3>
 							<!--<a href="df.html"></a>-->
 							<p>Design+Friends is a Berliner designer community with monthly meetups.</p>
 						</div>
@@ -205,6 +202,7 @@
 						</div>
 					</div><!--end Project Content 5-->
 				</div><!--end Project 5-->	
+				
 				<div class="project"><!--Open Project 4-->
 					<div class="image white-background">
 							<picture>
