--- a/linsenpate.html
+++ b/linsenpate.html
@@ -585,6 +585,26 @@
                 <!--end Project 6-->
 
                 <div class="related-project">
+                    <!--Open Project 5-->
+                    <a href="df.html">
+                        <div class="image white-background">
+                            <picture>
+                                <source srcset="img/home/designfriends_328x246.jpg" media="(max-width:767px)">
+                                <img src="img/home/designfriends_800x600.jpg" alt="Design+Friends" class="image__img round-borders">
+                            </picture>
+                        </div>
+                    </a>
+                    <div class="related-project-content">
+                        <div class="related-project-title">
+                            <h4><a href="df.html">Designer community bootstrap responsive site</h4></a>
+                            <!--<a href="df.html"></a>-->
+                        </div>
+                    </div>
+                    <!--end Project Content 5-->
+                </div>
+                <!--end Project 5-->
+
+                <div class="related-project">
                     <!--Open Project 4-->
                     <div class="image white-background">
                         <picture>
@@ -606,28 +626,7 @@
                     <!--end Project Content 4-->
                 </div>
                 <!--end Project 4-->
-                <div class="related-project">
-                    <!--Open Project 5-->
-                    <div class="image white-background">
-                        <picture>
-                            <source srcset="img/home/designfriends_328x246.jpg" media="(max-width:767px)">
-                            <img src="img/home/designfriends_800x600.jpg" alt="Design+Friends" class="image__img round-borders">
-                        </picture>
-                        <div class="image__overlay image__overlay--blur">
-                            <div class="image__title related-image__title">
-                                <h2>Coming Soon</h2>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="related-project-content">
-                        <div class="related-project-title">
-                            <h4>Designer community bootstrap responsive site</h4>
-                            <!--<a href="df.html"></a>-->
-                        </div>
-                    </div>
-                    <!--end Project Content 5-->
-                </div>
-                <!--end Project 5-->
+                
     
             </div>
          </section>
