Reverted Email Address

--- a/imprint.html
+++ b/imprint.html
@@ -80,7 +80,7 @@
                 <br>Geygerstraße 8
                 <br>12043 Berlin
                 </p>
-                <p>jumaber@gmail.com
+                <p>hi@juliamaribernaus.com
                 <br>USt.-ID: 16/274/00084
                 </p>
             </div>
