--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 				<br>
 				<br>
 				I am keen on keeping my private life “analog” and share it with my family and friends IRL 🙂 If you want to contact me,
-				write me an email at <a href="mailto:jumaber@gmail.com" target="_blank">jumaber@gmail.com</a> or connect with me on <a href="https://www.linkedin.com/in/juliamaribernaus/" target="_blank">Linkedin.</a>
+				write me an email at <a href="mailto:hi@juliamaribernaus.com" target="_blank">hi@juliamaribernaus.com</a> or connect with me on <a href="https://www.linkedin.com/in/juliamaribernaus/" target="_blank">Linkedin.</a>
 				</span>
 			</p><!--end paragraph-->
 			<a class="button button-primary" role="button" onclick="ReadMore()" id="aboutBtn">Learn more about me</a>			
@@ -340,7 +340,7 @@
 			<!--Open Contact-->
 			<h3>Get in touch!</h3>
 			<div class="contact-button-wrapper">
-				<a class="button button-primary contact-button left" href="mailto:jumaber@gmail.com" target="_blank"
+				<a class="button button-primary contact-button left" href="mailto:hi@juliamaribernaus.com" target="_blank"
 					role="button">Shoot me an email</a>
 				<a class="button button-secondary contact-button right" href="https://www.linkedin.com/in/juliamaribernaus/"
 					target="_blank" role="button">Connect on LinkedIn</a>
