--- a/jmb.html
+++ b/jmb.html
@@ -286,7 +286,7 @@
             <!--Open Contact-->
             <h3>Did you like my work?</h3>
             <div class="contact-button-wrapper">
-                <a class="button button-primary contact-button left" href="mailto:jumaber@gmail.com" target="_blank"
+                <a class="button button-primary contact-button left" href="mailto:hi@juliamaribernaus.com" target="_blank"
                     role="button">Shoot me an email</a>
                 <a class="button button-secondary contact-button right" href="https://www.linkedin.com/in/juliamaribernaus/"
                     target="_blank" role="button">Connect on LinkedIn</a>
