Changed Mister Spex Description

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						<!--open Project Content 1-->
 						<div class="project-title">
 							<h3><a href="linsenpate.html">Contactlenses e-commerce shop responsive redesign</a></h3>
-							<p>Linsenpate is a MisterSpex’s spin-off contactlenses e-commerce shop.</p>
+							<p>Linsenpate is a contactlenses e-commerce shop from one of the major European eyewear platforms.</p>
 						</div>
 						<div class="project-label align-bottom">
 							<p class="label-big">2021</p>
