Linkedin metagags on Shore

--- a/linsenpate.html
+++ b/linsenpate.html
@@ -34,9 +34,9 @@
     <!---Linkedin Featured Image-->
     <meta name="description" content="Linsenpate is a contactlenses e-commerce shop from one of the major European eyewear platforms.">
     <meta name="title" property="og:title" content="Contactlenses e-commerce shop responsive redesign">
-    <meta property="og:type" content="Porfolio" />
-    <meta name="image" property="og:image" content="https://www.juliamaribernaus.com/img/linsenpate/linsenpate_desktop.png" />
-    <meta name="description" property="og:description" content="Contactlenses e-commerce shop responsive redesign" /><meta name="Júlia Marí Bernaus" content="Linsenpate is a contactlenses e-commerce shop from one of the major European eyewear platforms." />
+    <meta property="og:type" content="Porfolio">
+    <meta name="image" property="og:image" content="https://www.juliamaribernaus.com/img/home/linsenpate_800x600.jpg">
+    <meta name="description" property="og:description" content="Contactlenses e-commerce shop responsive redesign"><meta name="Júlia Marí Bernaus" content="Linsenpate is a contactlenses e-commerce shop from one of the major European eyewear platforms.">
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
