--- a/shore.html
+++ b/shore.html
@@ -31,6 +31,14 @@
     <link href="img/favicon.ico" rel="shortcut icon">
     <title>Júlia Marí Bernaus | Shore</title>
 
+     <!---Linkedin Featured Image-->
+    <meta name="description" content="Full-cycle Design Thinking case study for non-professional watersports aficionados.">
+    <meta name="title" property="og:title" content="Android native app water sports case study">
+    <meta property="og:type" content="Porfolio">
+    <meta name="image" property="og:image" content="https://www.juliamaribernaus.com/img/home/shore_800x600.jpg">
+    <meta name="description" property="og:description" content="Android native app water sports case study"><meta name="Júlia Marí Bernaus" content="Full-cycle Design Thinking case study for non-professional watersports aficionados.">
+
+
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
         integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
