DF Linkedin metadata

--- a/df.html
+++ b/df.html
@@ -31,6 +31,14 @@
     <link href="img/favicon.ico" rel="shortcut icon">
     <title>Júlia Marí Bernaus | Front-End Portfolio</title>
 
+    <!---Linkedin Featured Image-->
+    <meta name="description" content="Design+Friends is a Berliner designer community with monthly meetups.">
+    <meta name="title" property="og:title" content="Designer community bootstrap responsive site">
+    <meta property="og:type" content="Porfolio">
+    <meta name="image" property="og:image" content="https://www.juliamaribernaus.com/img/home/designfriends_800x600.jpg">
+    <meta name="description" property="og:description" content="Designer community bootstrap responsive site"><meta name="Júlia Marí Bernaus" content="Design+Friends is a Berliner designer community with monthly meetups.">
+
+
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
