JMB Linkedin metadata

--- a/jmb.html
+++ b/jmb.html
@@ -31,6 +31,14 @@
     <link href="img/favicon.ico" rel="shortcut icon">
     <title>Júlia Marí Bernaus | Front-End Portfolio</title>
 
+    <!---Linkedin Featured Image-->
+    <meta name="description" content="Professional portfolio to showcase design and front-end development skills..">
+    <meta name="title" property="og:title" content="Responsive portfolio with CSS, HTML & Javascript">
+    <meta property="og:type" content="Porfolio">
+    <meta name="image" property="og:image" content="https://www.juliamaribernaus.com/img/home/jmb_800x600.jpg">
+    <meta name="description" property="og:description" content="Responsive portfolio with CSS, HTML & Javascript"><meta name="Júlia Marí Bernaus" content="Professional portfolio to showcase design and front-end development skills.">
+
+
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
