--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<!--Open Projects Box-->
 				<div class="project">
 					<!--Open Project 1-->
-					<div class="white-background">
+					<div>
 					<a href="linsenpate.html">
 						<picture>
 							<source srcset="img/home/linsenpate_328x246.png" media="(max-width:767px)">
@@ -115,7 +115,7 @@
 					</div><!--end Project Content-->
 				</div><!--end Project 1-->
 				<div class="project"><!--Open Project 2-->
-					<div class="white-background">
+					<div>
 					<a href="setting.html">
 						<picture>
 							<source srcset="img/home/setting_328x246.png" media="(max-width:767px)">
@@ -161,7 +161,7 @@
 
 				<div class="project"><!--Open Project 6-->
 					<a href="jmb.html">
-						<div class="white-background">
+						<div>
 							<picture>
 								<source srcset="img/home/jmb_328x246.jpg" media="(max-width:767px)">
 								<img src="img/home/jmb_800x600.jpg" alt="Júlia Marí Bernaus' Portfolio" class="image__img round-borders">
