Improvement of Homepage
Deleted Image at top (hero)
Added MSX card

--- a/index.html
+++ b/index.html
@@ -71,13 +71,9 @@
 	<!-- Hero -->
 	<main class="page-main">
 		<div id="hero" class="container">
-			<!--Open row that holds 2 columns-->
-			<div class="hero-pic pic-animation"><!--Open Column Right -->
-				<a href="#about"><img src="img/home/pic.png" alt="Júlia Marí Bernaus"></a>
-			</div><!--end pic-->
 			<div class="hero-cta">
 				<!--Open Column Left -->
-				<h1>Hi! I am <span class="name">Júlia</span>, a Berlin based <span class="job"> UX/UI Designer</span> and former CEO at <span class="past"><a href="https://www.artconnect.com" target="_blank"></a>Artconnect</span>.</h1>
+				<h1>Hi! I am <span class="name">Júlia</span>, a Berlin based <span class="job"> Product Experience Designer</span> and former CEO at <span class="past"><a href="https://www.artconnect.com" target="_blank"></a>Artconnect</span>.</h1>
 				<a class="button button-primary" href="#work" role="button">Check my work</a>
 			</div>
 			<!--end intro-->
@@ -92,6 +88,28 @@
 			</div>
 			<div class="projects-box">
 				<!--Open Projects Box-->
+				<div class="project">
+					<!--Open Project 0-->
+					<div>
+					<a href="msx.html">
+						<picture>
+							<source srcset="img/home/msx_328x246.png" media="(max-width:767px)">
+							<img src="img/home/msx_800x600.jpg" alt="Mister Spex" class="round-borders">
+						</picture>
+					</a>
+					</div>
+					<div class="project-content">
+						<!--open Project Content 0-->
+						<div class="project-title">
+							<h3><a href="msx.html">Modernizing and improving the Lens Configuration Page</a></h3>
+							<p>Mister Spex is one of the major European eyewear platforms.</p>
+						</div>
+						<div class="project-label align-bottom">
+							<p class="label-big">202-2024</p>
+							<p class="label-role">Senior Product Experience Designer</p>
+						</div>
+					</div><!--end Project Content-->
+				</div><!--end Project 0-->
 				<div class="project">
 					<!--Open Project 1-->
 					<div>
