--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					<a href="msx.html">
 						<picture>
 							<source srcset="img/home/msx_328x246.png" media="(max-width:767px)">
-							<img src="img/home/msx_800x600.jpg" alt="Mister Spex" class="round-borders">
+							<img src="img/home/msx_800x600.png" alt="Mister Spex" class="rond-borders">
 						</picture>
 					</a>
 					</div>
