Deleted Link from Card

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<div class="project-content">
 						<!--open Project Content 0-->
 						<div class="project-title">
-							<h3><a href="msx.html">Modernizing and improving the Lens Configuration Page</a></h3>
+							<h3>Modernizing and improving the Lens Configuration Page</a></h3>
 							<p>Mister Spex is one of the major European eyewear platforms.</p>
 						</div>
 						<div class="project-label align-bottom">
