Added Coming soon text

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<!--open Project Content 0-->
 						<div class="project-title">
 							<h3>Modernizing and improving the Lens Configuration Page</a></h3>
-							<p>Mister Spex is one of the major European eyewear platforms.</p>
+							<p>Mister Spex is one of the major European eyewear platforms. (Coming Soon)</p>
 						</div>
 						<div class="project-label align-bottom">
 							<p class="label-big">202-2024</p>
