Adapting new hero to desktop

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<div class="project-content">
 						<!--open Project Content 0-->
 						<div class="project-title">
-							<h3>Modernizing and improving the Lens Configuration Page</a></h3>
+							<h3>Enhancing the Lens Configuration User Experience</a></h3>
 							<p>Mister Spex is one of the major European eyewear platforms. (Coming Soon)</p>
 						</div>
 						<div class="project-label align-bottom">
@@ -252,30 +252,21 @@
 		<section class="container-about" id="about">
 			<h3>About</h3>
 			<p><!--open paragraph-->
-				I am a Berlin-based UX/UI Designer and former founder of Artconnect.com, the largest online creative community in Berlin
-				with 35k monthly active users. In 2020, I sold my venture and embarked on my true passion: UX, UI Design and Front-end
-				Development.
+				I am a Berlin-based Product Experience Designer and former founder of Artconnect.com, Berlin's largest online creative community with 35k monthly active users. In 2020, I sold my venture and embraced my true passion: Product Experience Design and Front-end Development.
 				<br>
 				<br>
-				I am currently working as a UX Design tutor at <a href="https://careerfoundry.com/" target="_blank" class="cool-link">CareerFoundry</a> and freelancing for companies such as <a href="https://www.misterspex.de/" target="_blank">Mister Spex</a>,
-				<a href="https://www.settinghq.com/" target="_blank">Setting</a>, <a href="https://duxer.co.uk/">Duxer</a> (Ikea, Userzoom), and creating a product from scratch with KEA. On the side, I organize
-				<a href="http://designandfriends.com/" target="_blank">Design+Friends</a>, a monthly Berlin Designer meetup.<span id="dots">..</span>
+				Currently, I am a Senior Experience Designer at <a href="https://www.misterspex.de/">Mister Spex</a>, enhancing the lens configuration user experience<span id="dots">.</span>
 				<br>
 				<br>
-				<span id="more">With a background in Fine Arts and 10 years of experience in product design, communications strategy, and management, I
-				can offer a balanced combination of structure and creativity while working in a diverse team. Being a founder of a
-				business has given me unique insight into complex projects and what affects their success. I’ve also learned to be
-				resourceful and innovative to find solutions that work for customers. Having an education on the technical side, gives
-				me a deeper understanding on how to build websites that are easy to develop.
+				<span id="more">With a background in Fine Arts and over 10 years of experience in product design, communications strategy, and management, I bring a balanced blend of structure and creativity to diverse teams. Founding a business has given me unique insights into complex projects and the factors influencing their success. It has also taught me to be resourceful and innovative in finding customer-centric solutions. My technical education provides me with a deep understanding of building user-friendly and developer-friendly websites.
 				<br>
 				<br>
 				In my free time, you will find me chatting with my friends, creating new recipes, fermenting food, growing my plants, or dancing to new and old music (while cooking too!). I ride my bike everywhere and
-				don’t want to own a car. I love playing with my kids and answering their questions about the world. I read anything Ican get my hands on related to health, psychology, company culture, technology, business, and socio-political issues… or
+				don't want to own a car. I love playing with my kids and answering their questions about the world. I read anything Ican get my hands on related to health, psychology, company culture, technology, business, and socio-political issues… or
 				just anything that catches my attention.
 				<br>
 				<br>
-				I am keen on keeping my private life “analog” and share it with my family and friends IRL 🙂 If you want to contact me,
-				write me an email at <a href="mailto:hi@juliamaribernaus.com" target="_blank">hi@juliamaribernaus.com</a> or connect with me on <a href="https://www.linkedin.com/in/juliamaribernaus/" target="_blank">Linkedin.</a>
+				Feel free to reach out via email at <a href="mailto:hi@juliamaribernaus.com" target="_blank">hi@juliamaribernaus.com</a> or connect with me on <a href="https://www.linkedin.com/in/juliamaribernaus/" target="_blank">Linkedin.</a>
 				</span>
 			</p><!--end paragraph-->
 			<a class="button button-primary" role="button" onclick="ReadMore()" id="aboutBtn">Learn more about me</a>			
