--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 				just anything that catches my attention.
 				<br>
 				<br>
-				Feel free to reach out via email at <a href="mailto:fraubernaus@gmail.com" target="_blank">fraubernaus@gmail.com</a> or connect with me on <a href="https://www.linkedin.com/in/juliamaribernaus/" target="_blank">Linkedin.</a>
+				Feel free to reach out via email at <a href="mailto:hi@juliamaribernaus.com" target="_blank">hi@juliamaribernaus.com</a> or connect with me on <a href="https://www.linkedin.com/in/juliamaribernaus/" target="_blank">Linkedin.</a>
 				</span>
 			</p><!--end paragraph-->
 			<a class="button button-primary" role="button" onclick="ReadMore()" id="aboutBtn">Learn more about me</a>			
@@ -353,7 +353,7 @@
 			<!--Open Contact-->
 			<h3>Get in touch!</h3>
 			<div class="contact-button-wrapper">
-				<a class="button button-primary contact-button left" href="mailto:fraubernaus@gmail.com" target="_blank"
+				<a class="button button-primary contact-button left" href="mailto:hi@juliamaribernaus.com" target="_blank"
 					role="button">Shoot me an email</a>
 				<a class="button button-secondary contact-button right" href="https://www.linkedin.com/in/juliamaribernaus/"
 					target="_blank" role="button">Connect on LinkedIn</a>
